--- a/WebLucky_Client/wwwroot/index.html
+++ b/WebLucky_Client/wwwroot/index.html
@@ -34,6 +34,8 @@
     <script src="js/Common.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="js/StripePayment.js"></script>
 </body>
 
 </html>
